syntax = "proto3";
package axelar.multisig.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/multisig/types";

// StartKeygenRequest represents a message to start key generation
message StartKeygenRequest {
  string sender_str = 1;  // deprecated
  string key_id = 2;
  bytes sender = 3;
}

// RotateKeyRequest represents a message to rotate a key for a chain
message RotateKeyRequest {
  string sender_str = 1;  // deprecated
  string chain = 2;
  string key_id = 3;
  bytes sender = 4;
}
